# collaborative-rsa-demo

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  bignum_wrapper.cpp  bignum_wrapper.hpp  client_common.hpp  common.cpp  common.hpp  main.cpp  main_client.cpp  main_client_generator.cpp  main_server.cpp  rsa_wrapper.hpp  server_common.hpp  smpc_test.sh
client/: CMakeLists.txt  common_client.c  common_client.h  main_client.c
old/: common-custom-primes.cpp  common-custom-primes.hpp
server/: CMakeLists.txt
